Added different formatter streatagies